# TFT_analytics_tool

./: .env.example  .gitignore  Dockerfile  api_server.py  bigquery_operations.py  clear_bigquery_data.py  clustering.py  data_collection.py  debug_encoding.py  delete-functions.sh  deploy-functions.sh  deploy_api.sh  docker-compose.yml  encode_all_data.py  extract_sample_matches.py  gunicorn_config.py  name_mapper.py  pyproject.toml  querying.py  requirements.txt  requirements_api.txt  setup_auth.sh  streamlit_app.py  temporary_debugging_item_tests.py  test-endpoints.sh  test_api_server.py  test_bigquery_data.py  test_bigquery_querying.py  test_deployment.sh  test_query_improvements.py  train_model.ipynb  view_predictions.py
00-Documentation/: DEPLOYMENT.md
01-Name_Mapping/: README.md  collect_subset.py  name_mapper.py
02-Data_Collection/: clear_bigquery_data.py  data_collection.py  riot_api_functions.py
03-Querying/: bigquery_operations.py  querying.py
100-Misc/: filter_tft14_data.py
99-Testing/: bigquery_querying_tests.py  cloud_function_tests.py  ml_pipeline_tests.py  querying_tests.py
999-Misc/: requirements.txt  view_predictions.py
cloud_functions/: utils.py
data/: structure.json
docs/: local_setup.md  query_system.md  supported_functions.md
documentation/: TFT_Query_System.md
misc/: filter_matches.py
ml/: README.md  __init__.py  data_loader.py  pipeline.py
scripts/: collect.py  collect_subset.py  manage.py  update_mappings.py
server/: app.py
static/: index.html
tft_analytics/: bigquery.py  clustering.py  mapper.py  postgres.py  (+1 more)
(+56 files in other folders)
